# KeyLight

./: .editorconfig  .gitignore  README.md  Start-KeyLight-App.cmd  pyproject.toml
artifacts/: RECORD .pcapng  ZonesRecord.pcapng  calibrate_live_verify_existing_sim.json  calibrate_live_verify_sim.json  calibrate_report_final.json  calibrate_report_hardware_round2_template.json  calibrate_report_live_verify_existing_sim.json  calibrate_report_live_verify_fail_smoke.json  calibrate_report_live_verify_pass_smoke.json  calibrate_report_live_verify_sim.json  calibrate_report_order_mismatch_smoke.json  calibrate_report_provenance_smoke.json  calibrate_report_readiness_workflow_fail_smoke.json  calibrate_report_readiness_workflow_smoke.json  calibrate_report_script_finalize_smoke.json  calibrate_report_script_finalize_smoke2.json  calibrate_report_script_template_smoke.json  calibrate_report_script_template_smoke5.json  calibrate_report_sim.json  calibrate_report_sim_from_file.json  calibrate_report_sim_json.json  calibrate_report_sim_profile.json  calibrate_report_verify_existing_sim.json  calibrate_report_verify_missing_profile.json  calibrate_report_verify_sim.json  calibrate_sweep_report.json  calibrate_sweep_sim_profile.json  calibrate_verify_existing_sim.json  calibrate_verify_readiness_workflow_smoke.json  calibrate_verify_script_finalize_smoke.json  calibrate_verify_script_finalize_smoke2.json  calibration_profile_stale_smoke.json  calibration_provenance_smoke.json  effect_verify_report.json  generated_zone_profile.json  hid_discovery_report.json  (+91 more)
config/: default.toml  (+2 more)
(+90 files in other folders)
